# stm32f10x-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  openocd.cfg  stm32  ttyUSB0  ttyUSB1
